fix announcements on mobile

--- a/layout-single-column.styl
+++ b/layout-single-column.styl
@@ -1488,6 +1488,14 @@
 				opacity: 1;
 			}
 		}
+		@media screen and (max-width: 424px) {
+			.announcements {
+				.reactions-bar {
+					width: calc(100% - 74px);
+					margin-left: unset;
+				}
+			}
+		}
 		/* Interactions counts inside the action bar */
 		.detailed-status__meta__line:first-child {
 			border-bottom: 0;
